# flet-app

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: desktop-and-mobile-builds.yml
android/src/main/java/com/bytebloom/: MyForegroundService.java
src/: main.py
src/main/: main.py
