[project]
name = "Down Free"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Hiyabo developer", email = "you@example.com" }
]
dependencies = [
  "flet==0.26.0", "requests", "yarl", "bs4", "hiyabocut==1.0.7", "asyncio", "flet-permission-handler"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "org.flets"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "downfree"

# company name to display in about app dialogs
company = "Hiyabo"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Hiyabo"
flutter.dependencies = ["flet-permission-handler"]

[tool.flet.app]
path = "src"

[tool.flet.android.permission] # --android-permissions
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
"android.permission.MANAGE_EXTERNAL_STORAGE" = true
"android.permission.QUERY_ALL_PACKAGES" = true
"android.permission.IGNORE_BATTERY_OPTIMIZATIONS" = true
"android.permission.INTERNET" = true

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}
