[project]

name = "Down Free"
version = "1.0.0"
description = "App para la descarga de archivos"
authors = [
  {name = "Hiyabo", email = "KeimaSenpai@proton.me"}
]
dependencies = ["flet==0.26.0", "aiohttp", "yarl", "bs4", "pysocks", "hiyabocut==1.0.7", "asyncio", "flet-geolocator", "flet-permission-handler"]


[tool.flet]
org = "by.bytebloom" # --org
product = "Down Free" # --product
company = "ByteBloom" # --company
copyright = "Copyright (C) 2025 by ByteBloom" # --copyright
build_number = 2 # --build-number
flutter.categories = ["android.intent.category.LAUNCHER", "android.intent.category.APP"]
flutter.background_mode = "foreground"
icon = "icon.png"

[tool.flet.android.permission] # --android-permissions
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
"android.permission.MANAGE_EXTERNAL_STORAGE" = true
"android.permission.FOREGROUND_SERVICE" = true
"android.permission.FOREGROUND_SERVICE_DATA_SYNC" = true
"android.permission.FOREGROUND_SERVICE_SPECIAL_USE" = true
"android.permission.STORAGE" = true
"android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" = true
"android.permission.INTERNET" = true
"android.permission.WAKE_LOCK" = true
"android.permission.LOCATION" = true
"android.permission.LOCATION_ALWAYS" = true
"android.permission.LOCATION_WHEN_IN_USE" = true

[tool.flet.android.services] # --android-services
services = ["by.bytebloom.down_free.MyForegroundService"]

[tool.flet.ios.info] # --info-plist
NSLocationWhenInUseUsageDescription = "This app uses location service when in use."

[tool.flet.app]
path = "src"

[tool.flet.android.signing]
# store and key passwords can be passed with `--android-signing-key-store-password`
# and `--android-signing-key-password` options or
# FLET_ANDROID_SIGNING_KEY_STORE_PASSWORD
# and FLET_ANDROID_SIGNING_KEY_PASSWORD environment variables.
key_store = "build/bytebloom.jks" # --android-signing-key-store
key_alias = "upload"
